--- a/MLProject.ipynb
+++ b/MLProject.ipynb
@@ -1,14 +1,185 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2536d0a8-ecf9-4075-99b5-113d554ddfab",
+   "metadata": {},
+   "source": [
+    "# Machine Learning Project - Predicting NBA Shots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d852ffa-4e3a-47cc-ba46-02793d00712c",
+   "metadata": {},
+   "source": [
+    "### Validate Button\n",
+    "Please note that this assignment uses nbgrader to facilitate grading. You will see a **validate button** at the top of your Jupyter notebook. If you hit this button, it will run tests cases for the lab that aren't hidden. It is good to use the validate button before submitting the lab. Do know that the labs in the course contain hidden test cases. The validate button will not let you know whether these test cases pass. After submitting your lab, you can see more information about these hidden test cases in the Grader Output. <br>\n",
+    "***Cells with longer execution times will cause the validate button to time out and freeze. Please know that if you run into Validate time-outs, it will not affect the final submission grading.*** <br>\n",
+    "https://www.kaggle.com/datasets/mexwell/nba-shots"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "df8499b2-4bd5-4855-b384-d20b2de365a8",
+   "execution_count": 6,
+   "id": "79e997a0-599f-47d9-a948-52e2ef834204",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Hello World\")"
+    "import scipy as sp\n",
+    "import scipy.stats as stats\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import copy\n",
+    "# Set color map to have light blue background\n",
+    "sns.set()\n",
+    "import statsmodels.formula.api as smf\n",
+    "import statsmodels.api as sm\n",
+    "%matplotlib inline"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "12b582bf-35ac-4173-9688-bb0fe6cce761",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 189803 entries, 0 to 189802\n",
+      "Data columns (total 26 columns):\n",
+      " #   Column          Non-Null Count   Dtype  \n",
+      "---  ------          --------------   -----  \n",
+      " 0   SEASON_1        189803 non-null  int64  \n",
+      " 1   SEASON_2        189803 non-null  object \n",
+      " 2   TEAM_ID         189803 non-null  int64  \n",
+      " 3   TEAM_NAME       189803 non-null  object \n",
+      " 4   PLAYER_ID       189803 non-null  int64  \n",
+      " 5   PLAYER_NAME     189803 non-null  object \n",
+      " 6   POSITION_GROUP  189803 non-null  object \n",
+      " 7   POSITION        189803 non-null  object \n",
+      " 8   GAME_DATE       189803 non-null  object \n",
+      " 9   GAME_ID         189803 non-null  int64  \n",
+      " 10  HOME_TEAM       189803 non-null  object \n",
+      " 11  AWAY_TEAM       189803 non-null  object \n",
+      " 12  EVENT_TYPE      189803 non-null  object \n",
+      " 13  SHOT_MADE       189803 non-null  bool   \n",
+      " 14  ACTION_TYPE     189803 non-null  object \n",
+      " 15  SHOT_TYPE       189803 non-null  object \n",
+      " 16  BASIC_ZONE      189803 non-null  object \n",
+      " 17  ZONE_NAME       189803 non-null  object \n",
+      " 18  ZONE_ABB        189803 non-null  object \n",
+      " 19  ZONE_RANGE      189803 non-null  object \n",
+      " 20  LOC_X           189803 non-null  float64\n",
+      " 21  LOC_Y           189803 non-null  float64\n",
+      " 22  SHOT_DISTANCE   189803 non-null  int64  \n",
+      " 23  QUARTER         189803 non-null  int64  \n",
+      " 24  MINS_LEFT       189803 non-null  int64  \n",
+      " 25  SECS_LEFT       189803 non-null  int64  \n",
+      "dtypes: bool(1), float64(2), int64(8), object(15)\n",
+      "memory usage: 36.4+ MB\n",
+      "None\n",
+      "   SEASON_1 SEASON_2     TEAM_ID               TEAM_NAME  PLAYER_ID  \\\n",
+      "0      2004  2003-04  1610612747      Los Angeles Lakers        977   \n",
+      "1      2004  2003-04  1610612757  Portland Trail Blazers        757   \n",
+      "2      2004  2003-04  1610612747      Los Angeles Lakers        977   \n",
+      "3      2004  2003-04  1610612757  Portland Trail Blazers        757   \n",
+      "4      2004  2003-04  1610612757  Portland Trail Blazers        757   \n",
+      "\n",
+      "        PLAYER_NAME POSITION_GROUP POSITION   GAME_DATE   GAME_ID HOME_TEAM  \\\n",
+      "0       Kobe Bryant              G       SG  04-14-2004  20301187       POR   \n",
+      "1  Damon Stoudamire              G       PG  04-14-2004  20301187       POR   \n",
+      "2       Kobe Bryant              G       SG  04-14-2004  20301187       POR   \n",
+      "3  Damon Stoudamire              G       PG  04-14-2004  20301187       POR   \n",
+      "4  Damon Stoudamire              G       PG  04-14-2004  20301187       POR   \n",
+      "\n",
+      "  AWAY_TEAM   EVENT_TYPE  SHOT_MADE         ACTION_TYPE       SHOT_TYPE  \\\n",
+      "0       LAL    Made Shot       True           Jump Shot  3PT Field Goal   \n",
+      "1       LAL    Made Shot       True  Driving Layup Shot  2PT Field Goal   \n",
+      "2       LAL  Missed Shot      False           Jump Shot  2PT Field Goal   \n",
+      "3       LAL    Made Shot       True           Jump Shot  2PT Field Goal   \n",
+      "4       LAL  Missed Shot      False           Jump Shot  2PT Field Goal   \n",
+      "\n",
+      "          BASIC_ZONE         ZONE_NAME ZONE_ABB       ZONE_RANGE  LOC_X  \\\n",
+      "0  Above the Break 3  Left Side Center       LC          24+ ft.   20.0   \n",
+      "1    Restricted Area            Center        C  Less Than 8 ft.   -0.0   \n",
+      "2          Mid-Range  Left Side Center       LC        16-24 ft.   13.3   \n",
+      "3          Mid-Range         Left Side        L        16-24 ft.   16.4   \n",
+      "4          Mid-Range        Right Side        R        16-24 ft.  -15.8   \n",
+      "\n",
+      "   LOC_Y  SHOT_DISTANCE  QUARTER  MINS_LEFT  SECS_LEFT  \n",
+      "0  21.35             25        6          0          0  \n",
+      "1   5.25              0        6          0          2  \n",
+      "2  24.45             23        6          0          9  \n",
+      "3  13.95             18        6          0         31  \n",
+      "4   7.85             16        6          0         55  \n",
+      "       SEASON_1       TEAM_ID      PLAYER_ID       GAME_ID          LOC_X  \\\n",
+      "count  189803.0  1.898030e+05  189803.000000  1.898030e+05  189803.000000   \n",
+      "mean     2004.0  1.610613e+09    1530.123844  2.030059e+07       0.274000   \n",
+      "std         0.0  8.365408e+00     757.888105  3.434095e+02      11.110596   \n",
+      "min      2004.0  1.610613e+09      15.000000  2.030000e+07     -25.000000   \n",
+      "25%      2004.0  1.610613e+09     947.000000  2.030030e+07      -6.100000   \n",
+      "50%      2004.0  1.610613e+09    1730.000000  2.030059e+07       0.000000   \n",
+      "75%      2004.0  1.610613e+09    2200.000000  2.030089e+07       7.100000   \n",
+      "max      2004.0  1.610613e+09    2724.000000  2.030119e+07      24.800000   \n",
+      "\n",
+      "               LOC_Y  SHOT_DISTANCE        QUARTER      MINS_LEFT  \\\n",
+      "count  189803.000000  189803.000000  189803.000000  189803.000000   \n",
+      "mean       11.984399      11.595955       2.475388       5.333588   \n",
+      "std         8.261104       9.546158       1.138648       3.472361   \n",
+      "min         0.050000       0.000000       1.000000       0.000000   \n",
+      "25%         5.250000       0.000000       1.000000       2.000000   \n",
+      "50%         8.350000      13.000000       2.000000       5.000000   \n",
+      "75%        18.250000      19.000000       3.000000       8.000000   \n",
+      "max        90.850000      87.000000       7.000000      12.000000   \n",
+      "\n",
+      "           SECS_LEFT  \n",
+      "count  189803.000000  \n",
+      "mean       28.669547  \n",
+      "std        17.466134  \n",
+      "min         0.000000  \n",
+      "25%        14.000000  \n",
+      "50%        29.000000  \n",
+      "75%        44.000000  \n",
+      "max        59.000000  \n",
+      "0         20.0\n",
+      "1         -0.0\n",
+      "2         13.3\n",
+      "3         16.4\n",
+      "4        -15.8\n",
+      "          ... \n",
+      "189798    23.3\n",
+      "189799    15.1\n",
+      "189800    -4.7\n",
+      "189801    -2.3\n",
+      "189802    -0.0\n",
+      "Name: LOC_X, Length: 189803, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "pd.set_option('display.max_columns', None)\n",
+    "\n",
+    "df = pd.read_csv('NBA_2004_Shots.csv')\n",
+    "print(df.info())\n",
+    "print(df.head())\n",
+    "print(df.describe())\n",
+    "print(df.LOC_X)\n",
+    "#sns.heatmap(df.corr())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f50d0c3-eba8-4eb1-bd52-8a21bdac45c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
